Simplify l10n of beta cta.

--- a/website/index.html
+++ b/website/index.html
@@ -18,7 +18,8 @@
     </div>
     <div class="flex flex-wrap items-center justify-center pt-6">
       <p class="font-md p-3 m-0">
-        {{ _('<span class="font-semibold">Want to try new features early?</span> Get the beta and be a part of the future of Thunderbird!') }}
+        <span class="font-semibold">{{ _('Want to try new features early?') }}</span>
+        {{ _('Get the beta and be a part of the future of Thunderbird!') }}
       </p>
       <a href="{{ url('thunderbird.download-beta') }}" class="btn-beta btn-beta-pill">{{ _('Get the Beta') }}</a>
     </div>
