--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -32,7 +32,7 @@
               {{ svg('handshake') }}
               {{ _('Help') }}
             </h2>
-            <p>{{ _('Curious about helping?  You don’t need to be an expert to help other users or offer suggestions about improving the experience! Join us in this open source project where anyone can participate in the Thunderbird community (You don’t need to be an expert, and you don’t need to know how to code).') }}</p>
+            <p>{{ _('Curious about helping? You don’t need to be an expert or know how to code to help other users or offer suggestions about improving the experience! Join us in this open source project where anyone can participate in the Thunderbird community.') }}</p>
             <a href="https://www.thunderbird.net/en-US/get-involved/" class="get-involved">
               {{ _('Get Involved') }}
               {{ svg('external-link') }}
