--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -59,7 +59,7 @@
           <section id="support">
             <h2 class="section-heading support">
               {{ svg('support') }}
-              {{ _('Question? Problem?') }}
+              {{ _('Questions? Problems?') }}
             </h2>
             <p>{{ _('Post your general Thunderbird usage questions or problems on the support page, where many knowledgeable users can help you.') }}</p>
             <a href="https://support.mozilla.org/questions/new/thunderbird" class="support">
