--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -44,7 +44,7 @@
               {{ svg('info') }}
               {{ _('Crashed?') }}
             </h2>
-            <p>{{ _('If Crash Reporter appeared (when Thunderbird crashes), please provide more details to help developers') }}</p>
+            <p>{{ _('If Crash Reporter appears when Thunderbird crashes, please provide as many details as possible to help developers') }}</p>
             <ul>
               <li>{{ _('In Thunderbird do Help > More Troubleshooting Information, scroll to "Crash Reports", click a recent report link to open the crash report page.') }}</li>
               <li>{{ _('Click the Bugzilla tab, then click on an existing bug report under "Related Bugs" and add a comment to the bug, or click "Thunderbird" to submit a new bug report.') }}</li>
