add mozilla connect and beta download pages

--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -37,6 +37,16 @@
               {{ _('Get Involved') }}
               {{ svg('external-link') }}
             </a>
+            <p>{{ _('Share ideas and feedback.') }}</p>
+            <a href="https://connect.mozilla.org/" class="get-involved">
+              {{ _('Mozilla Connect') }}
+              {{ svg('external-link') }}
+            </a>
+            <p>{{ _('Help make Thunderbird better.') }}</p>
+            <a href="https://www.thunderbird.net/download/beta/" class="get-involved">
+              {{ _('Get the Beta') }}
+              {{ svg('external-link') }}
+            </a>
           </section>
 
           <section id="crash">
