em for spacing and no svgs in css

--- a/start-page/_new-base-resp.html
+++ b/start-page/_new-base-resp.html
@@ -15,5 +15,11 @@
     <main>
       {% block main %}{% endblock %}
     </main>
+    <div class="logo-wireframe-light">
+      {{ svg('logo-wireframe-light') }}
+    </div>
+    <div class="logo-wireframe-dark">
+      {{ svg('logo-wireframe-dark') }}
+    </div>
   </body>
 </html>
