--- a/website/thunderbird/102.0/whatsnew/index.html
+++ b/website/thunderbird/102.0/whatsnew/index.html
@@ -16,7 +16,7 @@
 
       <a href="{{ donate_url('home_page_body') }}" class="donation-appeal">
         <div class="inline-block w-16 mr-4 text-donation">{{ svg('heart') }}</div>
-        <p class="tracking-wider leading-loose m-0">
+        <p class="tracking-wide leading-normal m-0">
           {{ _('<strong>Thunderbird</strong> is both free and freedom respecting, but we’re also completely funded by donations! <strong>Help us sustain the project and continue to improve.</strong>') }}
         </p>
         <div class="inline-block w-6 ml-4 text-donation">{{ svg('chevron-right') }}</div>
