--- a/website/thunderbird/102.0/whatsnew/index.html
+++ b/website/thunderbird/102.0/whatsnew/index.html
@@ -26,7 +26,7 @@
       </div>
     </aside>
     <aside class="xl:flex hidden xl:ml-8 max-w-3xl">
-      <img class="w-full h-auto mb-10 max-w-2xl self-center shadow-img" src="{{ static('/media/img/thunderbird/whatsnew/102/102-header.png') }}" alt="Screenshot of Thunderbird's new system dark mode.">
+      <img class="w-full h-auto max-w-2xl self-start shadow-img" src="{{ static('/media/img/thunderbird/whatsnew/102/102-header.png') }}" alt="Screenshot of Thunderbird's new system dark mode.">
     </aside>
 
   </section>
